charts/restrict-tenant-networks/tests/functional/client-running.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-policy-client
  namespace: ($clientNamespace)
status:
  phase: Running
