charts/restrict-tenant-networks/tests/functional/whoami-ready.yaml
apiVersion: v1
kind: Pod
metadata:
  name: whoami
  namespace: ($namespace)
status:
  phase: Running
  (conditions[?type == 'Ready']):
    - status: "True"
